api update currency
